modified plugin declataion hilt

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,5 +39,5 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-hilt = { id = "com.google.dagger.hilt.android" }
-ksp = { id = "com.google.devtools.ksp"}
+ksp = { id = "com.google.devtools.ksp", version.ref="kspVersion"}
 
